Regression BugFix
518 - Table CTA Missing - Removed incorrect tag closing
527 - LiveReport is not showing reports - Corrected the path of DE
513 - Datalayer fields are missing - Removed incorrect tag closing
522 - Error Handling tab not visible - Corrected incorrect tag closing
528 - Global site wide setting missing - Corrected incorrect tag closing
526 - 2 lines Title overlaps in Snippet - Correct lineheight as per XD
523 - Table icon in Article RTE is visible - Updated RTE to RTE2
524 - Image path points to root - Corrected path to /content/landrover/dam/
518 - Default CTA icon is not displayed - Updated default CTA value

--- a/ui.apps/src/main/content/jcr_root/apps/jlr/components/snippet/v1/snippet/clientlibs/css/snippet.css
+++ b/ui.apps/src/main/content/jcr_root/apps/jlr/components/snippet/v1/snippet/clientlibs/css/snippet.css
@@ -1,131 +1,182 @@
 .cmp-Snippet {
-    text-align: left;
+	text-align: left;
 }
+
+.cmp-Snippet .headingWrapper p {
+	line-height: 38px;
+}
+
 .cmp-Snippet h2 {
-    margin-bottom: 0;
+	margin-bottom: 0;
 }
+
 .cmp-Snippet p {
-    margin-top: 23px;
-    width: 85%;
-    line-height: 20px;
+	margin-top: 23px;
+	width: 85%;
+	line-height: 20px;
 }
+
 .cmp-Snippet .linkContainer .secondaryLinkContainer:empty {
-    display: none;
+	display: none;
 }
+
 .cmp-Snippet .linkContainer .primaryLinkContainer,
 .cmp-Snippet .linkContainer .secondaryLinkContainer {
-    margin-top: 26px;
-    margin-right: 20px;
-    display: inline-block;
-    vertical-align: middle;
-    text-transform: uppercase;
+	margin-top: 26px;
+	margin-right: 20px;
+	display: inline-block;
+	vertical-align: middle;
+	text-transform: uppercase;
 }
+
 .cmp-Snippet .linkContainer .primaryLinkContainer a,
 .cmp-Snippet .linkContainer .secondaryLinkContainer a {
-    margin-top: 0;
+	margin-top: 0;
 }
+
 .cmp-Snippet .linkContainer .primaryLinkContainer:first-child,
 .cmp-Snippet .linkContainer .secondaryLinkContainer:first-child {
-    margin-left: 0;
+	margin-left: 0;
 }
+
 .cmp-Snippet .linkContainer .primaryLinkContainer.secondaryLinkType,
 .cmp-Snippet .linkContainer .secondaryLinkContainer.secondaryLinkType {
-    display: block;
-    margin-left: 0;
+	display: block;
+	margin-left: 0;
 }
+
 @media screen and (min-width: 1px) and (max-width: 900px) {
-    .cmp-Snippet p {
-        margin-top: 23px;
-        width: 100%;
-    }
+	.cmp-Snippet p {
+		margin-top: 23px;
+		width: 100%;
+	}
 }
+
 @media screen and (min-width: 1px) and (max-width: 740px) {
-    .cmp-Snippet p {
-        width: 100%;
-    }
-    .cmp-Snippet.hide-title-mobile {
-        display: none;
-    }
-    .cmp-Snippet .linkContainer .secondaryLinkContainer {
-        margin-top: 0;
-    }
-    .cmp-Snippet .linkContainer .primaryLinkContainer,
-    .cmp-Snippet .linkContainer .secondaryLinkContainer {
-        display: block;
-        margin-left: 0;
-       
-    }
-    .cmp-Snippet .linkContainer .secondaryLinkContainer .primaryLinkWithStyle,
-    .cmp-Snippet .linkContainer .secondaryLinkContainer .secondaryLinkWithStyle {
-        margin-top: 28px;
-    }
-    .cmp-Snippet .primaryLinkContainer + .secondaryLinkContainer {
-        margin-top: 0;
-    }
+	.cmp-Snippet p {
+		width: 100%;
+	}
+	.cmp-Snippet.hide-title-mobile {
+		display: none;
+	}
+	.cmp-Snippet .linkContainer .secondaryLinkContainer {
+		margin-top: 0;
+	}
+	.cmp-Snippet .linkContainer .primaryLinkContainer,
+	.cmp-Snippet .linkContainer .secondaryLinkContainer {
+		display: block;
+		margin-left: 0;
+	}
+	.cmp-Snippet .linkContainer .secondaryLinkContainer .primaryLinkWithStyle,
+	.cmp-Snippet .linkContainer .secondaryLinkContainer .secondaryLinkWithStyle {
+		margin-top: 28px;
+	}
+	.cmp-Snippet .primaryLinkContainer+.secondaryLinkContainer {
+		margin-top: 0;
+	}
 }
+
 .cmp-Snippet--with-DerivativesOverview {
-    padding-bottom: 8px;
+	padding-bottom: 8px;
 }
-.cmp-Snippet + .DerivativesOverview .Derivative__range {
-    padding: 0;
+
+.cmp-Snippet+.DerivativesOverview .Derivative__range {
+	padding: 0;
 }
+
 @media screen and (min-width: 741px) {
-    .cmp-Snippet + .DerivativesOverview .Derivative__range + .Derivative__toggle-content {
-        padding-top: 40px;
-    }
+	.cmp-Snippet+.DerivativesOverview .Derivative__range+.Derivative__toggle-content {
+		padding-top: 40px;
+	}
 }
-.cmp-Snippet + .DerivativesOverview .Derivative__toggle-content {
-    background: #fff;
+
+.cmp-Snippet+.DerivativesOverview .Derivative__toggle-content {
+	background: #fff;
 }
+
 @media screen and (min-width: 901px) {
-    .cmp-Snippet + .DerivativesOverview .Derivative__toggle-content {
-        padding-top: 56px;
-    }
+	.cmp-Snippet+.DerivativesOverview .Derivative__toggle-content {
+		padding-top: 56px;
+	}
 }
+
 @media (max-width: 740px) {
-    .cmp-Snippet.Accordion--mobile-hide {
-        display: block;
-        height: 1px;
-        padding: 0;
-        visibility: hidden;
-        position: absolute;
-        top: 0;
-    }
+	.cmp-Snippet.Accordion--mobile-hide {
+		display: block;
+		height: 1px;
+		padding: 0;
+		visibility: hidden;
+		position: absolute;
+		top: 0;
+	}
 }
+
 .cmp-Snippet__MarketRegionalPricing {
-    display: flex;
-    justify-content: center;
-    padding-top: 24px;
+	display: flex;
+	justify-content: center;
+	padding-top: 24px;
 }
+
 .cmp-Snippet h2 {
-    margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .cmp-Snippet .linkContainer {
-    padding-top: 6px;
+	padding-top: 6px;
 }
+
 .cmp-Snippet .copy {
-    font-size: 18px;
+	font-size: 18px;
 }
+
 @media screen and (min-width: 1px) and (max-width: 900px) {
-    .cmp-Snippet .copy {
-        font-size: 16px;
-        line-height: 18px;
-    }
-    .cmp-Snippet p {
-        margin-top: 23px;
-    }
+	.cmp-Snippet .copy {
+		font-size: 16px;
+		line-height: 18px;
+	}
+	.cmp-Snippet p {
+		margin-top: 23px;
+	}
 }
+
 @media screen and (min-width: 1px) and (max-width: 740px) {
-    .cmp-Snippet p {
-        margin-top: 18px;
-    }
-    .cmp-Snippet .copy {
-        font-size: 14px;
-    }
+	.cmp-Snippet p {
+		margin-top: 18px;
+	}
+	.cmp-Snippet .copy {
+		font-size: 14px;
+	}
 }
+
 @media screen and (min-width: 1281px) and (max-width: 2000px) {
-    .cmp-Snippet  {
-        padding-left: 190px;
-    }
+	.cmp-Snippet {
+		padding-left: 190px;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	.cmp-Snippet .headingWrapper p {
+		line-height: 26px;
+	}
+	.cmp-Snippet .copy p {
+		line-height: 19px;
+	}
+}
+
+@media screen and (min-width: 376px) and (max-width: 768px) {
+	.cmp-Snippet .headingWrapper p {
+		line-height: 30px;
+	}
+	.cmp-Snippet .copy p {
+		line-height: 19px;
+	}
+}
+
+@media screen and (min-width: 769px) and (max-width: 1280px) {
+	.cmp-Snippet .headingWrapper p {
+		line-height: 38px;
+	}
+	.cmp-Snippet .copy p {
+		line-height: 24px;
+	}
 }
